traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:1: error: Unmatched closing brace '}' ignored here
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}}
                                                                             ^TraversalZigZag:3: error: ':' expected but ')' found.
def avancerCrois(a):
                  ^TraversalZigZag:20: error: identifier expected but '}' found.
  return false}
              ^