traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
def estPosiFin():Boolean={
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}}

def avancerCrois(a):
  var x=getX()
  var y=getY()
	x=x+1
	if 
override def run() {
  
  
  
}







  return false}
def avancer(){

  y=y+1
  if (y+1>getMondeHauteur()){y=0;x=x+1}
  setPos(x,y)
}


override def run() {
  var mark=0
  do{ecritMessage(mark)
     mark=mark+1
    avancer()
  }while(!estPosiFin())
  ecritMessage(mark)
}